--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -30,9 +30,9 @@
             </div>
           {% endfor %}
         {% else %}
-          <div class="card mb-4">
-            <div class="card-body">
-              <h4 class="text-center">No posts found</h4>
+          <div class="card mb-4 alert-info">
+            <div class="card-body py-2">
+              <h4 class="text-center mb-0">No posts found</h4>
             </div>
           </div>
         {% endif %}
