--- a/blog/templates/search.html
+++ b/blog/templates/search.html
@@ -8,8 +8,8 @@
       <div class="col-md-8 my-4">
         {% if posts %}
           <div class="card mb-4 alert-info">
-            <div class="card-body">
-              <h4>{{posts.count}} Search result for "{{word}}"</h4>
+            <div class="card-body py-2">
+              <h4 class="mb-0">{{posts.count}} Search result for "{{word}}"</h4>
             </div>
           </div>
           {% for post in posts %}
@@ -36,8 +36,8 @@
           {% endfor %}
         {% else %}
           <div class="card mb-4 alert-info">
-            <div class="card-body">
-              <h4 class="text-center">No results found for "{{word}}"</h4>
+            <div class="card-body py-2">
+              <h4 class="text-center mb-0">No results found for "{{word}}"</h4>
             </div>
           </div>
         {% endif %}
