--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -36,14 +36,14 @@
   <!-- Blog Archive -->
   <div class="card my-4">
     <h5 class="card-header">Archive</h5>
-    <div class="card-body">
-      <select class="form-control">
-        <option>All</option>
-        <option>January</option>
-        <option>February</option>
-        <option>March</option>
-        <option>April</option>
-      </select>
+    <div class="card-body" style="max-height: 400px; overflow-y: scroll;">
+      <ul class="navbar-nav">
+        {% for archive in archives %}
+          <li class="nav-item">
+            <a href="{% url 'archive' archive.year archive.month %}" class="nav-link">{{archive.yearmon}}</a>
+          </li>
+        {% endfor %}
+      </ul>
     </div>
   </div>
 
