add time icons to post and archive

--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -14,7 +14,7 @@
           </div>
           <div class="card-footer d-flex">
             <div class="mr-2">
-              <i class="fal fa-clock"></i>{{post.published}}
+              <i class="far fa-clock"></i> {{post.published}}
             </div>
             <div class="mr-2">
               <a href=""><i class="fa fa-user"></i> {{post.author}}</a>
