--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -15,17 +15,22 @@
                 <p class="card-text text-justify">{{post.content|slice:'0:400'}}</p>
                 <a href="{% url 'singlepost' id=post.id %}" class="btn bg-django">Read More &rarr;</a>
               </div>
-              <div class="card-footer">
-                <span><i class="fal fa-clock"></i>{{post.published}}</span>
-                <span>
+              <div class="card-footer d-flex">
+                <div class="mr-2">
+                  <i class="far fa-clock"></i> {{post.published}}
+                </div>
+                <div class="mr-2">
                   <a href=""><i class="fa fa-user"></i> {{post.author}}</a>
-                </span>
-                <span>
+                </div>
+                <div class="mr-2">
                   {% for tag in post.tags.all %}
                     <span class="font-bold">.</span>
                     <a href="">{{tag.name}}</a>
                   {% endfor %}
-                </span>
+                </div>
+                <div>
+                  {{post.views}} views
+                </div>
               </div>
             </div>
           {% endfor %}
