--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -40,7 +40,7 @@
       <ul class="navbar-nav">
         {% for archive in archives %}
           <li class="nav-item">
-            <a href="{% url 'archive' archive.year archive.month %}" class="nav-link">{{archive.yearmon}}</a>
+            <a href="{% url 'archive' archive.year archive.month %}" class="nav-link"><i class="far fa-clock"></i> {{archive.yearmon}}</a>
           </li>
         {% endfor %}
       </ul>
