--- a/blog/templates/tag.html
+++ b/blog/templates/tag.html
@@ -9,7 +9,7 @@
         {% if posts %}
           <div class="card mb-4 alert-info">
             <div class="card-body py-2">
-              <h4 class="mb-0">Posts about <span class="text-uppercase">{{tag}}</span></h4>
+              <h4 class="mb-0">Posts related to <span class="text-uppercase">{{tag}}</span></h4>
             </div>
           </div>
           {% for post in posts %}
