--- a/blog/templates/category.html
+++ b/blog/templates/category.html
@@ -12,33 +12,9 @@
               <h4 class="mb-0">Posts on <span class="text-uppercase">{{category}}</span></h4>
             </div>
           </div>
-          {% for post in posts %}
-            <div class="card mb-4">
-              <img class="card-img-top" style="max-height: 300px;" src="{{post.image}}" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">{{post.title}}</h2>
-                <p class="card-text text-justify">{{post.content|slice:'0:400'}}</p>
-                <a href="{% url 'singlepost' id=post.id %}" class="btn bg-django">Read More &rarr;</a>
-              </div>
-              <div class="card-footer d-flex">
-                <div class="mr-2">
-                  <i class="far fa-clock"></i> {{post.published}}
-                </div>
-                <div class="mr-2">
-                  <a href="{% url 'author' post.author %}"}><i class="fa fa-user"></i> {{post.author}}</a>
-                </div>
-                <div class="mr-2">
-                  {% for tag in post.tags.all %}
-                    <span class="font-bold">.</span>
-                    <a href="{% url 'tags' tag.name %}">{{tag.name}}</a>
-                  {% endfor %}
-                </div>
-                <div>
-                  {{post.views}} views
-                </div>
-              </div>
-            </div>
-          {% endfor %}
+          {% block posts %}
+            {% include 'layouts/posts.html' %}
+          {% endblock %}
         {% else %}
           <div class="card mb-4 alert-info">
             <div class="card-body py-2">
@@ -47,32 +23,9 @@
           </div>
         {% endif %}
 
-        <!-- Pagination -->
-        {% if posts.has_other_pages %}
-          <ul class="pagination justify-content-center mb-4">
-            {% if posts.has_previous %}
-            <li class="page-item">
-              <a class="page-link" href="?page={{posts.previous_page_number}}">&laquo; Older</a>
-            </li>
-            {% else %}
-              <li><span class=" page-link disabled">&laquo; Older</span></li>
-            {% endif %}
-            {% for page in posts.paginator.page_range %}
-              {% if posts.number == page %}
-              <li><a class="page-link text-danger" href="?page={{page}}">{{page}}</a></li>
-              {% else %}
-                <li><a class="page-link" href="?page={{page}}">{{page}}</a></li>
-              {% endif %}
-            {% endfor %}
-            {% if posts.has_next %}
-              <li class="page-item">
-                <a class="page-link" href="?page={{posts.next_page_number}}">Newer &raquo;</a>
-              </li>
-            {% else %}
-              <li><span class="disabled page-link">Newer&raquo;</span></li>
-            {% endif %}
-          </ul>
-        {% endif %}
+        {% block pagination %}
+          {% include 'layouts/pagination.html' %}
+        {% endblock %}
       </div>
 
       <!-- Sidebar Widgets Column -->
