--- a/blog/templates/layouts/main.html
+++ b/blog/templates/layouts/main.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <header>
-      {% include 'layouts/header.html' %}
+      {% include 'layouts/topheader.html' %}
+      {% include 'layouts/btmheader.html' %}
     </header>
     {% block main %}
     {% endblock %}
