--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -24,6 +24,10 @@
                   <td>{{user.last_login}}</td>
                 </tr>
                 <tr>
+                  <td>Access to admin</td>
+                  <td>{{user.is_staff}}</td>
+                </tr>
+                <tr>
                   <td>Password</td>
                   <td><a class="btn bg-django" href="{% url 'password_change' %}">Change Password</a></td>
                 </tr>
