--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -2,36 +2,51 @@
 
 {% block main %}
   <!-- Page Content -->
-  <div class="container main">
+  <div class="container-fluid main">
     <div class="row justify-content-center">
       <!-- Blog Entries Column -->
-      <div class="col-md-8 my-4">
-        <h4 class="bg-django card-header">User Info</h4>
+      <div class="col-md-12 my-4">
+        <h4 class="bg-django card-header">Change User</h4>
           <div class="card mb-4">
             <div class="card-body">
-              <table class="table table-bordered">
-                <tr>
-                  <td>Username</td>
-                  <td>{{user.username}}</td>
-                </tr>
-                  <td>Email</td>
-                  <td>{{user.email}}</td>
-                </tr>
-                  <td>Full Name</td>
-                  <td>{{user.get_full_name}}</td>
-                </tr>
-                  <td>Last Login</td>
-                  <td>{{user.last_login}}</td>
-                </tr>
-                <tr>
-                  <td>Access to admin</td>
-                  <td>{{user.is_staff}}</td>
-                </tr>
-                <tr>
-                  <td>Password</td>
-                  <td><a class="btn bg-django" href="{% url 'password_change' %}">Change Password</a></td>
-                </tr>
-              </table>
+              <form method="post" action="{% url 'profile' %}">
+                {% csrf_token %}
+                <table class="table table-bordered">
+                  <tr>
+                    <td>Username</td>
+                    <td><input type="text" class="form-control" value="{{user.username}}" name="username"></td>
+                  </tr>
+                  <tr>
+                    <td>Password</td>
+                    <td>{{user.password}}</td>
+                  </tr>
+                  <tr>
+                    <td>Email</td>
+                    <td><input type="text" class="form-control" value="{{user.email}}" name="email"></td>
+                  </tr>
+                  <tr>
+                    <td>First Name</td>
+                    <td><input type="text" class="form-control" value="{{user.first_name}}" name="first_name"></td>
+                  </tr>
+                  <tr>
+                    <td>Last Name</td>
+                    <td><input type="text" class="form-control" value="{{user.last_name}}" name="last_name"></td>
+                  </tr>
+                  <tr>
+                    <td>Last login</td>
+                    <td>{{user.last_login}}</td>
+                  </tr>
+                  <tr>
+                    <td>Date joined</td>
+                    <td>{{user.date_joined}}</td>
+                  </tr>
+                  <tr>
+                    <td>Password</td>
+                    <td><a href="{% url 'password_change' %}">Change Password</a></td>
+                  </tr>
+                </table>
+                <p class="text-right"><button type="submit" class="btn bg-django">Update</button></p>
+              </form>
             </div>
           </div>
       </div>
