--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -8,7 +8,7 @@
       <div class="col-md-12 my-4">
         <h4 class="bg-django card-header">Change User</h4>
           <div class="card mb-4">
-            <div class="card-body">
+            <div class="card-body" style="overflow-x: auto;">
               <form method="post" action="{% url 'profile' %}">
                 {% csrf_token %}
                 <table class="table table-bordered">
