--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -9,9 +9,12 @@
         <h4 class="bg-django card-header">Change User</h4>
           <div class="card mb-4">
             <div class="card-body">
-              {% if errors %}
-                <p class="text-danger p-2 font-weight-bold" style="border: 1px solid red; border-radius: 5px!important;">{{errors}}</p>
+              {% if form.non_field_errors %}
+                <p class="text-danger p-2 font-weight-bold" style="border: 1px solid red; border-radius: 5px!important;">{{form.non_field_errors}}</p>
               {% endif %}
+              {% for field in form %}
+                {{field.errors}}
+              {% endfor %}
               <form method="post" action="{% url 'profile' %}">
                 {% csrf_token %}
                 <table class="table table-bordered">
