--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -28,7 +28,7 @@
                     <td><input type="text" name="first_name" value="{{user.first_name}}"></td>
                   </tr>
                   <tr>
-                    <td>First Name</td>
+                    <td>Last Name</td>
                     <td><input type="text" name="last_name" value="{{user.last_name}}"></td>
                   </tr>
                   <tr>
