--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -10,7 +10,7 @@
           <div class="card mb-4">
             <div class="card-body">
               {% if form.non_field_errors %}
-                <p class="text-danger p-2 font-weight-bold" style="border: 1px solid red; border-radius: 5px!important;">{{form.non_field_errors}}</p>
+                <p class="text-danger form-warning">{{form.non_field_errors}}</p>
               {% endif %}
               <form method="post" action="{% url 'profile' %}">
                 {% csrf_token %}
