--- a/blog/templates/registration/signup.html
+++ b/blog/templates/registration/signup.html
@@ -8,7 +8,7 @@
           <h4 class="card-header bg-django">Sign Up</h4>
           <div class="card-body">
             {% if form.non_field_errors %}
-              <p class="text-danger p-2 font-weight-bold" style="border: 1px solid red; border-radius: 5px!important;">{{form.non_field_errors}}</p>
+              <p class="text-danger form-warning">{{form.non_field_errors}}</p>
             {% endif %}
             <form method="post" accept="{% url 'signup' %}?next=/site/admin">
               {% csrf_token %}
