--- a/blog/templates/layouts/topheader.html
+++ b/blog/templates/layouts/topheader.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="d-flex justify-content-between px-0 mb-0">
       <li class="nav-item list-unstyled">
-        <a class="nav-link logo" href="{% url 'index' %}">MYBLOG</a>
+        <a class="nav-link logo" href="{% url 'index' %}">THESTEM</a>
       </li>
       <li class="list-unstyled">
         <ul class="d-flex">
