--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -106,7 +106,7 @@
 
       <!-- Sidebar Widgets Column -->
       <div class="col-md-4">
-        {% include 'layouts/sidebar.html' %}}
+        {% include 'layouts/sidebar.html' %}
       </div>
     </div>
     <!-- /.row -->
