--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -81,7 +81,7 @@
             <div class="card-body">
               <h2 class="card-title">{{post.title}}</h2>
               <p class="card-text text-justify">{{post.content|slice:'0:350'}}</p>
-              <p class="text-right"><a href="{% url 'singlepost' id=post.id %}" class="btn bg-django">Read More &rarr;</a></p>
+              <p class="text-right"><a href="{% url 'singlepost' id=post.id slug=post.slug%}" class="btn bg-django">Read More &rarr;</a></p>
             </div>
             <div class="card-footer d-flex">
               <div class="mr-2">
