--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -39,7 +39,7 @@
                 <textarea class="form-control" name="content" required="" placeholder="Type your comment"></textarea>
               </div>
               <div class="d-flex">
-                <p class="text-left flex-fill">Comment as
+                <p class="text-left flex-fill mb-0">Comment as
                   <span class="font-weight-bold">
                     {% if user.is_authenticated %}
                       {{user.username}}
@@ -48,7 +48,7 @@
                     {% endif %}
                   </span>
                 </p>
-                <p class="text-right flex-fill"><button type="submit" class="btn btn-sm bg-django">Publish</button></p>
+                <p class="text-right flex-fill mb-0"><button type="submit" class="btn btn-sm bg-django">Publish</button></p>
               </div>
             </form>
           </div>
