--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <!-- Sidebar Widgets Column -->
-      <div class="col-md-4 sidebar my-4">
+      <div class="col-md-4 my-4">
         {% include 'layouts/sidebar.html' %}
       </div>
     </div>
