--- a/blog/templates/layouts/sidebar.html
+++ b/blog/templates/layouts/sidebar.html
@@ -1,4 +1,5 @@
-  <!-- Search Widget -->
+<div class="clearfix sidebar mb-4">
+    <!-- Search Widget -->
   <div class="card">
     <h5 class="card-header">Search</h5>
     <div class="card-body">
@@ -92,3 +93,4 @@
        </div>
     </div>
   </div>
+</div>
