--- a/blog/templates/posts/single.html
+++ b/blog/templates/posts/single.html
@@ -105,7 +105,7 @@
       </div>
 
       <!-- Sidebar Widgets Column -->
-      <div class="col-md-4">
+      <div class="col-md-4 my-4">
         {% include 'layouts/sidebar.html' %}
       </div>
     </div>
